--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "red-framework",
   "version": "0.0.1",
-  "description": "",
-  "author": "",
+  "description": "The framework for RealEstate industry",
+  "author": "minhtamtt@gmail.com",
+  "main": "dist/index.js",
   "license": "MIT",
   "scripts": {
     "build": "rimraf dist && tsc -p tsconfig.build.json",
@@ -22,15 +23,22 @@
     "@nestjs/common": "^6.0.0",
     "@nestjs/core": "^6.0.0",
     "@nestjs/platform-express": "^6.0.0",
+    "dotenv": "^8.1.0",
+    "mssql": "^5.1.0",
+    "nestjs-config": "^1.4.3",
     "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.2",
-    "rxjs": "^6.3.3"
+    "rxjs": "^6.3.3",
+    "sequelize": "^5.15.2",
+    "sequelize-typescript": "^1.0.0"
   },
   "devDependencies": {
     "@nestjs/testing": "^6.0.0",
+    "@types/dotenv": "^6.1.1",
     "@types/express": "4.16.1",
     "@types/jest": "24.0.11",
     "@types/node": "11.13.4",
+    "@types/sequelize": "^4.28.4",
     "@types/supertest": "2.0.7",
     "jest": "24.7.1",
     "prettier": "1.17.0",
